SERVER-55358: Check sync source too stale before starting oplog fetcher in tenant migrations